[project]
name = "ghost-publish"
version = "0.0.1"
dependencies = [
  "nbconvert"
]

[project.entry-points."nbconvert.exporters"]
ghost = "ghost_publish.nbconvert.exporters.ghost_html_exporter:GhostHTMLExporter"

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project.scripts]
ghostpub-relink-filter = "ghost_publish.scripts.relink_image_filter:main"
ghostpub-split-yaml = "ghost_publish.scripts.split_yaml:main"
ghostpub-post = "ghost_publish.scripts.publish:main"